--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "express": "^4.17.1",
+    "mmcc": "git+https://gitlab.com/i3lab/mmcc/frontend/mmcc-vue.git",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.3",
     "pg": "^8.6.0",
