Added redirect to HTTPS on production environment only

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^2.15.3",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
+    "redirect-ssl": "^3.0.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
